--- a/style.css
+++ b/style.css
@@ -9,5 +9,12 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 100vw;
     background: linear-gradient(to bottom right, red, purple);
+}
+.player {
+    height: 80%;
+    width: 30%;
+    border-radius: 5px;
+    background-color: black;
 }
