--- a/style.css
+++ b/style.css
@@ -12,9 +12,30 @@
     width: 100vw;
     background: linear-gradient(to bottom right, red, purple);
 }
+.player-1 {
+    background-color: rgba(255, 255, 255, 0.8) !important;
+}
+
 .player {
     height: 80%;
-    width: 30%;
+    width: 35%;
     border-radius: 5px;
-    background-color: black;
+    background-color: rgba(105, 105, 105, 0.8);
+    padding: 15px;
+    color: black;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+}
+.score {
+    font-size: 3.5rem;
+    color: rgba(221, 0, 55, 0.979);
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.currentScore {
+    height: 100px;
+    width: 200px;
+    background-color: rgba(221, 19, 63, 0.7);
 }
