--- a/style.css
+++ b/style.css
@@ -13,14 +13,14 @@
     background: linear-gradient(to bottom right, red, purple);
 }
 .player-1 {
-    background-color: rgba(255, 255, 255, 0.8) !important;
+    background-color: rgba(255, 255, 255, 0.3) !important;
 }
 
 .player {
     height: 80%;
     width: 35%;
-    border-radius: 5px;
-    background-color: rgba(105, 105, 105, 0.8);
+    border-radius: 10px;
+    background-color: rgba(105, 105, 105, 0.3);
     padding: 15px;
     color: black;
     text-align: center;
@@ -29,13 +29,17 @@
     justify-content: space-around;
     flex-direction: column;
 }
+.upperArea > p{
+    margin: 40px 0px;
+}
 .score {
-    font-size: 3.5rem;
-    color: rgba(221, 0, 55, 0.979);
+    font-size: 3.8rem;
+    color: rgb(0, 0, 0);
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .currentScore {
     height: 100px;
     width: 200px;
-    background-color: rgba(221, 19, 63, 0.7);
+    background-color: rgba(128, 0, 122, 0.6);
+    border-radius: 10px;
 }
